fixed alignment

--- a/src/components/Styles/Benefits.css
+++ b/src/components/Styles/Benefits.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 10px;
 }
 .benefits h1{
     font-size: 2rem;
